# pautina-hosting

./: README.MD
backend/: .env.example  TODO  conftests.py  pyproject.toml
backend/docs/: conf.py  index.rst
backend/docs/_build/doctrees/: app.doctree  app.routers.doctree  environment.pickle  index.doctree  modules.doctree
backend/docs/_build/doctrees/source/app/: modules.doctree  routers.admin.doctree  routers.auth.doctree  routers.doctree  routers.hosts.doctree  routers.users.doctree
backend/docs/_build/html/: .buildinfo  app.html  app.routers.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
backend/docs/_build/html/_modules/: index.html
backend/docs/_build/html/_modules/app/: api.html  database.html  models.html  schemas.html
backend/docs/_build/html/_modules/app/routers/: admin.html  auth.html  hosts.html  users.html
backend/docs/_build/html/_sources/: app.routers.rst.txt  app.rst.txt
backend/docs/_build/html/source/app/: modules.html  routers.admin.html  routers.auth.html  routers.hosts.html  routers.html  routers.users.html
backend/src/app/: api.py  database.py  models.py  schemas.py
backend/src/app/core/: security.py
backend/src/app/routers/: admin.py  auth.py  hosts.py  users.py
backend/tests/app/: test_routers.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
